kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: devops-project-service
  namespace: devops
spec:
  selector:
    app: devops-project
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
